--- a/client/principal.html
+++ b/client/principal.html
@@ -149,98 +149,12 @@
 	</section>
 
 
-<div class="modal fade" id="ingresar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Login</h4>
-	      </div>
-	      <form>
-	      <div class="modal-body">
-	      		<div class="form-group">
-	      			<input type="text" name="username" id="username" placeholder="Usuario" class="form-control">
-	      		</div>
-	      		<div class="form-group">
-	      			<input type="password" name="password" id="password" placeholder="Contraseña" class="form-control">
-	      		</div>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-	        <button type="button" class="btn btn-primary">Ingresar</button>
-	      </div>
-	      </form>
-	    </div>
-	  </div>
-	</div>
+<!-- ingresar -->
+{{> ingreso}}
+	
+<!-- registro -->
 
-	 <div class="modal fade" id="registrar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Registrar</h4>
-	      </div>
-	      <form>
-	      <div class="modal-body">
-	      	<div class="row">
-	      			<div class="col-md-6">
-	      				<div class="form-group">
-	      					<label for="paterno">Ap. Paterno</label>
-	      					<input type="text" name="paterno" id="paterno" class="form-control">
-	      				</div>
-	      			</div>
-	      			<div class="col-md-6">
-	      				<div class="form-group">
-	      					<label for="materno">Ap. Materno</label>
-	      					<input type="text" name="materno" id="materno" class="form-control">
-	      				</div>
-	      			</div>
-	      			<div class="col-md-12">
-	      				<div class="form-group">
-	      					<label for="nombres">Nombres</label>
-	      					<input type="text" name="nombres" id="nombres" class="form-control">
-	      				</div>
-	      			</div>
-	      			<div class="col-md-12">
-	      				<div class="form-group">
-	      					<label for="carrera">Carrera</label>
-	      					<select name="carrera" id="carrera"  class="form-control">
-	      						<option value="Ing. Sistemas">Ing. Sistemas</option>
-	      						<option value="Ing. Civil">Ing. Civil</option>
-	      						<option value="Derecho">Derecho</option>
-	      						<option value="Auditoria">Auditoria</option>
-	      					</select>
-	      				</div>
-	      			</div>
-	      			<div class="col-md-12">
-	      				<div class="form-group">
-	      					<label for="email">Email</label>
-	      					<input type="text" name="email" id="email" class="form-control">
-	      				</div>
-	      			</div>
-	      			<div class="col-md-6">
-	      				<div class="form-group">
-	      					<label for="usuario">Nombre de Usuario</label>
-	      					<input type="text" name="usuario" id="usuario" class="form-control">
-	      				</div>
-	      			</div>
-	      			<div class="col-md-6">
-	      				<div class="form-group">
-	      					<label for="password">Password</label>
-	      					<input type="password" name="password" id="password" class="form-control">
-	      				</div>
-	      			</div>
-	      	</div>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-	        <button type="button" class="btn btn-primary">Registrar</button>
-	      </div>
-	      </form>
-	    </div>
-	  </div>
-	</div>
+{{> registro}}
 	
 </div>
 </template>
