--- a/client/principal.html
+++ b/client/principal.html
@@ -21,7 +21,11 @@
 				        <li class=""><a href="#testimonial">Testimonios</a></li>
 				        <li class=""><a href="#contact">Contacto</a></li>
 				        <li class=""><a href="" data-toggle="modal" data-target="#registrar">Registro</a></li>
-				        <li class=""><a href="#" data-toggle="modal" data-target="#ingresar">Login</a></li>
+				        {{#if currentUser}}
+				        	<li class=""><a href="#" data-toggle="modal" data-target="#ingresar">Login</a></li>
+				        {{else}}
+				        	<li class=""><a href="#" id="logout">Logout</a></li>
+				        {{/if}}
 				      </ul>
 				    </div>
 				</div>
