--- a/client/principal.html
+++ b/client/principal.html
@@ -17,7 +17,7 @@
 				    </div>
 				    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
 				      <ul class="nav navbar-nav">
-				        <li class="active"><a href="#banner">Inicios</a></li>
+				        <li class="active"><a href="#banner">Inicio</a></li>
 				        <li class=""><a href="#service">Servicios</a></li>
 				        <li class=""><a href="#testimonial">Testimonios</a></li>
 				        <li class=""><a href="#contact">Contacto</a></li>
