--- a/client/principal.html
+++ b/client/principal.html
@@ -1,7 +1,7 @@
 <template name="principal">
 <head>
 	<title>U.A.T.F.</title>
-	<link rel="stylesheet" href="css/principal.css">
+	<link rel="stylesheet" type="text/css" href="/css/principal.css">
 </head>
 <div id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 	<!--banner-->
@@ -25,7 +25,7 @@
 			        <li class=""><a href="#docentes">Docentes</a></li>
 			        <li class=""><a href="#testimonial">Testimonios</a></li>
 			        <li class=""><a href="#contact">Contacto</a></li>
-			        <li class=""><a href="#" data-toggle="modal" data-target="#ingresar">Ingresar</a></li>
+			        <li class=""><a href="" data-toggle="modal" data-target="#ingresar">Ingresar</a></li>
 			      </ul>
 			    </div>
 			</div>
@@ -39,7 +39,7 @@
 					</div>
 					<div class="banner-text text-center">
 						<h1 class="white">Plataforma Virtual U.A.T.F.</h1>
-						<p>Plataforma Educativa para establecer un contacto organizado con un grupo de personas que compartan intereses, básicamente contiene herramientas que pueden servir para estar en línea con un colectivo y programar actividades, compartir ideas, material educativo o administrar un curso virtual 100% o que sirva como complemento de un curso presencial...</p>
+						<p>Plataforma Educativa para establecer un contacto organizado con un grupo de personas que compartan intereses, básicamente contiene herramientas que pueden servir para estar en línea con un colectivo y programar actividades, compartir ideas, material educativo o administrar un curso virtual 100% o que sirva como complemento de un curso presencial.</p>
 						<a href="#contact" class="btn btn-appoint">Contactanos</a>
 					</div>
 					<div class="overlay-detail text-center">
