--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,10 +1,9 @@
 <template name="dashboard">
 <head>
-	<link rel="stylesheet" href="css/dashboard.css">
+	<link rel="stylesheet" type="text/css" href="/css/dashboard.css">
 </head>
 <div id="wrapper">
   <!-- Navegacion -->
-  {{#if ready}}
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -98,38 +97,36 @@
                 </li>
             </ul>
         </li>
-        <li class="dropdown">
+        {{#if ready}}
+            <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{usuario.username}} <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li>
                     <a href="/dashboard/perfil"><i class="fa fa-fw fa-user"></i> Perfil</a>
                 </li>
+                {{#if isInRole "administrador"}}
+                    <li>
+                        <a href="/dashboard/config"><i class="fa fa-fw fa-cogs"></i> Configuracion</a>
+                    </li>
+                {{/if}}
                 <li class="divider"></li>
                 <li>
                     <a href="#" id="linkSalir"><i class="fa fa-fw fa-power-off"></i> Salir</a>
                 </li>
             </ul>
-        </li>
+            </li>
+        {{else}}
+            Cargando...
+        {{/if}}
     </ul>
     <!-- /.navbar-collapse -->
   </nav>
- 	{{/if}}
 
   <div id="page-wrapper">
       <div class="container-fluid">
           <!-- Page Heading -->
-          <div class="row">
-              <div class="col-lg-12">
-                  <ol class="breadcrumb">
-                      <li class="active">
-                          <i class="fa fa-television"></i> Cursos
-                      </li>
-                  </ol>
-                  <h2 class="page-header">Cursos</h2>
-              </div>
-          </div>
-          <!-- /.row -->
           {{>Template.dynamic template=contentDasboard}}
+          <!-- /.row -->
       </div>
       <!-- /.container-fluid -->
   </div>
