--- a/client/dashboard/cursos/cursosEstudiante.html
+++ b/client/dashboard/cursos/cursosEstudiante.html
@@ -1,19 +1,25 @@
 <template name="cursosEstudiante">
 	<div class="row">
-	{{#each cursosList}}
-		<div class="col-sm-6 col-md-3">
+      <div class="col-md-12">
+          <h2 class="page-header">Cursos</h2>
+          <br>
+          <br>
+      </div>
+  </div>
+  <div class="row">
+  	{{#each cursos}}
+  	<div class="col-sm-6 col-md-3">
 	    <div class="thumbnail">
-	      <img src="images/curso.jpg" alt="Curso">
+	      <img src="{{imagen.link}}" alt="...">
 	      <div class="caption">
-	        <h3>Titulo curso</h3>
-	        <p>Autor o autores</p>
-	        <p>Descripcion</p>
-	        <p class="text-right">
-	          <a href="">Ver mas detalles <i class="fa fa-arrow-circle-right"></i></a>
-	        </p>
+	        <h3 class="text-center">{{titulo}}</h3>
+	        <p><strong>Facilitador:</strong> {{cursoAutor.profile.paterno}} {{cursoAutor.profile.materno}}, {{cursoAutor.profile.nombres}}</p>
+	        <p><strong>Inicio del curso:</strong> {{moment inicio}}</p>
+	        <p><strong>Descripcion: </strong>{{descripcion}}</p>
+	        <p><a href="/dashboard/cursos/{{_id}}" class="btn btn-primary" role="button">Incribete</a></p>
 	      </div>
-	    </div>
-	  </div>
-	{{/each}}
+    	</div>
+ 		</div>
+ 		{{/each}}
 	</div>
 </template>
