--- a/client/principal.html
+++ b/client/principal.html
@@ -87,7 +87,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Acceso mediante redes sociales</h4>
-						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacion correcta 
+						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacioncorrecta .
 						del usuario.</p>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Consultas y Sugerencias</h4>
-						<p>En caso que una persona que no este inscrito dentro de la plataforma, tendra una opcion de hacer una sola consulta la cual se dara respuesta una ves que la persna deje su correo electronico, tambien un usuario tene un referente de buzon de sugerencias loscualess toaran en cuenta para mejorar la calidad de la plataforma virtual.</p>
+						<p>En caso que una persona que no este inscrito dentro de la plataforma, tendra una opcion de hacer una sola consulta la cual se dara respuesta una ves que la persona deje su correo electronico, tambien un usuario tiene un referente de buzon de sugerencias los cualess tomaran en cuenta para mejorar la calidad de la plataforma virtual.</p>
 					</div>
 				</div>
 			</div>
