--- a/client/dashboard/cursos/cursosFacilitador.html
+++ b/client/dashboard/cursos/cursosFacilitador.html
@@ -21,7 +21,7 @@
 	        {{#if creador}}
 						<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary" role="button">Ver Curso</a> <a href="#" class="btn btn-default" role="button">Modificar</a>
 					{{else}}
-	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary" role="button">Incribete</a>
+	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary linkInscripcion" role="button">Incribete</a>
 	        {{/if}}
 	        </p>
 	      </div>
