--- a/client/principal.html
+++ b/client/principal.html
@@ -58,7 +58,7 @@
 			<div class="col-md-4 col-sm-4">
 				<h2 class="ser-title">Nuestros Servicios</h2>
 				<hr class="botm-line">
-				<p>Básicamente contiene herramientas que pueden servir para estar en línea con un colectivo y programar actividades, compartir ideas, material educativo o administrar un curso virtual 100% o que sirva como complemento de un curso presencial.</p>
+				<p>Básicamente contiene herramientas que pueden servir para estar en línea con un colectivo y programar actividades, compartir ideas, material educativo o administrar un curso virtual 100% o que sirva como complemento de un curso presencial..</p>
 			</div>
 			<div class="col-md-4 col-sm-4">
 				<div class="service-info">
@@ -67,7 +67,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Soporte Las 24 horas</h4>
-						<p>Se otorgara soporte tecnico las 24 horas del dia, en las cuales los administradores y facilitadores de cada curso tendran la capacidad de poder subir un amplio compendio de materiales para poder ser descargado por los estudiante los cuales tendran la facilidad de tener el material del curso al cual se inscribio.</p>
+						<p>Se otorgara soporte tecnico las 24 horas del dia, en las cuales los administradores y facilitadores de cada curso tendran la capacidad de poder subir un amplio compendio de materiales para poder ser descargado por los estudiante los cuales tendran la facilidad de tener el material del curso al cual se inscribio..</p>
 					</div>
 				</div>
 				<div class="service-info">
@@ -76,7 +76,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Atencion Personalizada</h4>
-						<p>Se cuenta con una atencion individual en el area del chat al cual podra tener acceso el estudiante que cuente con una cuenta, el ismo si esta en el horario en los cuales los facilitadores estan activos podran tener un chat personalizado en tiempo real con el o la facilitador</p>
+						<p>Se cuenta con una atencion individual en el area del chat al cual podra tener acceso el estudiante que cuente con una cuenta, el ismo si esta en el horario en los cuales los facilitadores estan activos podran tener un chat personalizado en tiempo real con el o la facilitador..</p>
 					</div>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Acceso mediante redes sociales</h4>
-						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacioncorrecta .
+						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacioncorrecta..
 						del usuario.</p>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Consultas y Sugerencias</h4>
-						<p>En caso que una persona que no este inscrito dentro de la plataforma, tendra una opcion de hacer una sola consulta la cual se dara respuesta una ves que la persona deje su correo electronico, tambien un usuario tiene un referente de buzon de sugerencias los cualess tomaran en cuenta para mejorar la calidad de la plataforma virtual.</p>
+						<p>En caso que una persona que no este inscrito dentro de la plataforma, tendra una opcion de hacer una sola consulta la cual se dara respuesta una ves que la persona deje su correo electronico, tambien un usuario tiene un referente de buzon de sugerencias los cualess tomaran en cuenta para mejorar la calidad de la plataforma virtual..</p>
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 		      <div class="thumbnail"> 
 		      	<img src="images/2.jpg" alt="..." class="team-img">
 		        <div class="caption">
-		          <h3>Amanda Denyl</h3>
+		          <h3>Amanda Denyls</h3>
 		          <p>ingeniero de Sistemas</p>
 		          <ul class="list-inline">
 		            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
