--- a/client/principal.html
+++ b/client/principal.html
@@ -87,7 +87,7 @@
 					</div>
 					<div class="icon-info">
 						<h4>Acceso mediante redes sociales</h4>
-						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacioncorrecta..
+						<p>Esta habilitado dentro de la plataforma la habilitacion mediante redes sociales como Facebook, Twiter, etc, siendo esta un factor el cual influye para la habilitacion correcta pueden solicitar preguntas muy frecuentes ..
 						del usuario.</p>
 					</div>
 				</div>
