--- a/client/principal.html
+++ b/client/principal.html
@@ -131,7 +131,7 @@
 		      <div class="thumbnail"> 
 		      	<img src="images/1.jpg" alt="..." class="team-img">
 		        <div class="caption">
-		          <h3>Iai Donas</h3>
+		          <h3>david sosa</h3>
 		          <p>Ingeniero de Sistemas</p>
 		          <ul class="list-inline">
 		            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -145,7 +145,7 @@
 		      <div class="thumbnail"> 
 		      	<img src="images/2.jpg" alt="..." class="team-img">
 		        <div class="caption">
-		          <h3>Amanda Denyls</h3>
+		          <h3>Amanda Miguel</h3>
 		          <p>ingeniero de Sistemas</p>
 		          <ul class="list-inline">
 		            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
