--- a/client/principal.html
+++ b/client/principal.html
@@ -117,7 +117,7 @@
 		      <div class="thumbnail"> 
 		      	<img src="images/2.jpg" alt="..." class="team-img">
 		        <div class="caption">
-		          <h3>Jessica Wally</h3>
+		          <h3>Alexander Duran</h3>
 		          <p>Ingeniero de Sistemas</p>
 		          <ul class="list-inline">
 		            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -131,7 +131,7 @@
 		      <div class="thumbnail"> 
 		      	<img src="images/1.jpg" alt="..." class="team-img">
 		        <div class="caption">
-		          <h3>david sosa</h3>
+		          <h3>David Sosa</h3>
 		          <p>Ingeniero de Sistemas</p>
 		          <ul class="list-inline">
 		            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
