--- a/client/dashboard/cursos/cursosFacilitador.html
+++ b/client/dashboard/cursos/cursosFacilitador.html
@@ -11,13 +11,19 @@
   	{{#each cursos}}
   	<div class="col-sm-6 col-md-3">
 	    <div class="thumbnail">
-	      <img src="/images/curso.jpg" alt="...">
+	      <img src="{{imagen.link}}" alt="...">
 	      <div class="caption">
 	        <h3 class="text-center">{{titulo}}</h3>
 	        <p><strong>Facilitador:</strong> {{cursoAutor.profile.paterno}} {{cursoAutor.profile.materno}}, {{cursoAutor.profile.nombres}}</p>
 	        <p><strong>Inicio del curso:</strong> {{moment inicio}}</p>
 	        <p><strong>Descripcion: </strong>{{descripcion}}</p>
-	        <p><a href="/dashboard/cursos/{{_id}}" class="btn btn-primary" role="button">Incribete</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+	        <p>
+	        {{#if creador}}
+						<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary" role="button">Ver Curso</a> <a href="#" class="btn btn-default" role="button">Modificar</a>
+					{{else}}
+	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary linkInscripcion" role="button">Incribete</a>
+	        {{/if}}
+	        </p>
 	      </div>
     	</div>
  		</div>
@@ -45,11 +51,15 @@
 	        		<label for="inicio">Fecha de Inicio</label>
 	        		<input type="date" name="inicio" placeholder="dd/mm/aaaa" class="form-control">
 	        	</div>
+	        	<div class="form-group">
+	        		<label for="imagen">Imagen</label>
+	        		<input type="file" name="imagen" class="form-control" required>
+	        	</div>
 	        </form>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="submit" class="btn btn-primary" form="formCrearCurso">Save changes</button>
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+	        <button type="submit" class="btn btn-primary" form="formCrearCurso">Registrar curso</button>
 	      </div>
 	    </div>
 	  </div>
