--- a/client/dashboard/adminCurso/chat.html
+++ b/client/dashboard/adminCurso/chat.html
@@ -1,26 +1,27 @@
 <template name="chat">
-	<div class="row">
-		<div class="col-md-10 other-user">
-			<p>Usuario Invitado</p>
-			<p>jajajaj</p>
+	<div class="box-chat">
+		<div class="row mesages">
+			<div class="col-md-10 other-user">
+				<p>Usuario</p>
+				<p>mensaje 1</p>
+			</div>
+			<div class="col-md-10 other-user">
+				<p>Usuario</p>
+				<p>mensaje 1</p>
+			</div>
+			<div class="col-md-10 other-user">
+				<p>Usuario</p>
+				<p>mensaje 1</p>
+			</div>
+			<div class="col-md-10 col-md-offset-2 i-user">
+				<p>Usuario</p>
+				<p>mensaje 1</p>
+			</div>
 		</div>
-		<div class="col-md-10 other-user">
-			<p>Usuario Invitado</p>
-			<p>jajajaj</p>
-		</div>
-		<div class="col-md-10 other-user">
-			<p>Usuario Invitado</p>
-			<p>jajajaj</p>
-		</div>
-
-		<div class="col-md-10 col-md-offset-2 i-user">
-			<p class="text-right">jajajaj</p>
-		</div>
-		
-	</div>
-	<div class="row">
-		<div class="col-md-12 caja">
-			<input type="text" name="mensaje" class="form-control msgChat">
+		<div class="row">
+			
+				<input type="text" class="form-control" placeholder="escriba su mensaje aqui...">
+			
 		</div>
 	</div>
 </template>
