--- a/client/dashboard/adminCurso/materiales.html
+++ b/client/dashboard/adminCurso/materiales.html
@@ -9,7 +9,7 @@
 		<div class="col-md-6 square-material">
 			<h3>{{titulo}}</h3>
 			<video controls>
-				<source src='/videos/movie.mp4' tipe="video/mp4">
+				<source src='{{video.link}}' tipe="video/mp4">
 			</video>
 			<div class="row">
 				<div class="col-md-12">
