--- a/client/dashboard/curso/nuevoMaterial.html
+++ b/client/dashboard/curso/nuevoMaterial.html
@@ -1,18 +1,5 @@
-<template name="adminCurso">
-	<div class="row">
-		<div class="col-md-12">
-			<h1 class="page-header">{{curso.titulo}}</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-8">
-			{{>materiales}}
-		</div>
-		<div class="col-md-4">
-			<h3>Preguntas del curso</h3>
-			<hr>
-		</div>
-	</div>
+<template name="nuevoMaterial">
+
 <div class="modal fade" id="modalNuevoMaterial" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -27,10 +14,6 @@
         		<input type="text" name="titulo" class="form-control">
         	</div>
         	<div class="form-group">
-        		<label for="descripcion">Breve descripcion</label>
-        		<input type="text" name="descripcion" class="form-control">
-        	</div>
-        	<div class="form-group">
         		<label for="video">Agregar video</label>
         		<input type="file" name="video" class="form-control">
         	</div>
@@ -43,4 +26,5 @@
     </div>
   </div>
 </div>
+
 </template>
