--- a/client/dashboard/curso/materiales.html
+++ b/client/dashboard/curso/materiales.html
@@ -4,32 +4,35 @@
 	<button class="btn btn-success" data-toggle="modal" data-target="#modalNuevoMaterial"><i class="fa fa-plus"></i> Agregar material</button>
 	<br>
 	<br>
-	<div class="row">
 	{{#each materiales}}	
-		<div class="col-md-6 square-material">
-			<h3>{{titulo}}</h3>
+	<div class="row square-material">
+		<div class="col-md-12">
+			<h3 class="text-center">{{titulo}}</h3>
+		</div>
+		<div class="col-md-6">
 			<video controls>
-				<source src='{{video.link}}' tipe="video/mp4">
+				{{#if readyVideos}}
+					<source src='{{video.link}}' tipe="video/mp4">
+				{{else}}
+					Cargando...
+				{{/if}}
 			</video>
 			<div class="row">
 				<div class="col-md-12">
-					<button class="btn btn-block btn-success">Activar Chat</button>
+					{{#if chatActivo}}
+						<button class="btn btn-block btn-danger btnDesactivarChat">Desactivar Chat</button>
+					{{else}}
+						<button class="btn btn-block btn-success btnActivarChat">Activar Chat</button>
+					{{/if}}
 					<br>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<button class="btn btn-block btn-primary btnArchivos">Archivos del curso</button>
-					<br>
-				</div>
-				<div class="col-md-6">
-					<button class="btn btn-block btn-primary btnChat">Chat</button>
-					<br>
-				</div>
-			</div>
-			{{>Template.dynamic template=boxMaterial}}
-		</div>	
-	{{/each}}
+		</div>
+		<div class="col-md-6 ">
+			{{>chat salaChat=chatActivo idMaterial=_id}}
+		</div>
 	</div>
+	{{>archivos}}
+	{{/each}}
 	{{>nuevoMaterial}}
 </template>
