--- a/client/dashboard/curso/archivos.html
+++ b/client/dashboard/curso/archivos.html
@@ -1,33 +1,42 @@
 <template name="archivos">
-<div class="box-archivos">
-<div class="row">
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
-	</div>
-	<div class="col-md-6">
-		<a href=""><i class="fa fa-download"></i> Enlace 1</a>
+<div class="row title-box-files">
+	<div class="col-md-12">
+			<strong><i class="fa fa-clone"></i> Archivos</strong>
+			<button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#addArchivo"><i class="fa fa-plus"></i></button>
 	</div>
 </div>
+<div class="row box-files">
+	<div class="col-md-4">
+		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
+	</div>
+	<div class="col-md-4">
+		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
+	</div>
+	<div class="col-md-4">
+		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
+	</div>
+</div>
+<!-- Modal para insertar archivos -->
+<div class="modal fade" id="addArchivo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Agregar Archivos</h4>
+      </div>
+      <div class="modal-body">
+      	<form id="agregarArchivo">
+      		<div class="form-group">
+      			<label for="archivo">Archivo</label>
+      			<input type="file" name="archivo" class="form-control" required>
+      		</div>
+      	</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
 </template>
