--- a/client/dashboard/cursos/cursosFacilitador.html
+++ b/client/dashboard/cursos/cursosFacilitador.html
@@ -22,7 +22,7 @@
 						<a href="/dashboard/adminCurso/{{_id}}" class="btn btn-primary btn-block" role="button"><i class="fa fa-folder-open"></i> Administrar Curso</a>
 						<button class="btn btn-block btn-danger btnEliminarCurso"><i class="fa fa-trash"></i> Eliminar Curso</button>
 					{{else}}
-	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary linkInscripcion" role="button">Incribete</a>
+	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary linkInscripcion" role="button">Inscribete</a>
 	        {{/if}}
 	        </p>
 	      </div>
