modulo de administracion de cursos terminado

--- a/client/dashboard/curso/materiales.html
+++ b/client/dashboard/curso/materiales.html
@@ -32,7 +32,7 @@
 			{{>chat salaChat=chatActivo idMaterial=_id}}
 		</div>
 	</div>
-	{{>archivos}}
+	{{>archivos idMaterial=_id}}
 	{{/each}}
 	{{>nuevoMaterial}}
 </template>
