--- a/client/dashboard/curso/archivos.html
+++ b/client/dashboard/curso/archivos.html
@@ -2,22 +2,18 @@
 <div class="row title-box-files">
 	<div class="col-md-12">
 			<strong><i class="fa fa-clone"></i> Archivos</strong>
-			<button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#addArchivo"><i class="fa fa-plus"></i></button>
+			<button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#addArchivo{{idMaterial}}"><i class="fa fa-plus"></i></button>
 	</div>
 </div>
 <div class="row box-files">
-	<div class="col-md-4">
-		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
-	</div>
-	<div class="col-md-4">
-		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
-	</div>
-	<div class="col-md-4">
-		<a href=""><i class="fa fa-download"></i> Documento pdf</a>
-	</div>
+	{{#each archivos idMaterial}}
+		<div class="col-md-4">
+			<a href="{{archivoFile.link}}" download="{{archivoFile.name}}"><i class="fa fa-download"></i> {{archivoFile.name}}</a> <button class="btn btn-danger btn-xs btnEliminarArchivo">x</button>
+		</div>
+	{{/each}}
 </div>
 <!-- Modal para insertar archivos -->
-<div class="modal fade" id="addArchivo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="addArchivo{{idMaterial}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -25,7 +21,8 @@
         <h4 class="modal-title" id="myModalLabel">Agregar Archivos</h4>
       </div>
       <div class="modal-body">
-      	<form id="agregarArchivo">
+      	<form id="agregarArchivo{{idMaterial}}">
+      		<input type="hidden" name="material" value="{{idMaterial}}">
       		<div class="form-group">
       			<label for="archivo">Archivo</label>
       			<input type="file" name="archivo" class="form-control" required>
@@ -33,8 +30,8 @@
       	</form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn btn-primary" form="agregarArchivo{{idMaterial}}">Guardar Archivo</button>
       </div>
     </div>
   </div>
