--- a/client/dashboard/curso/adminCurso.html
+++ b/client/dashboard/curso/adminCurso.html
@@ -9,8 +9,7 @@
 			{{>materiales}}
 		</div>
 		<div class="col-md-4">
-			<h3>Preguntas del curso</h3>
-			<hr>
+			{{>preguntas}}
 		</div>
 	</div>
 </template>
