cursos pasados y discuciones

--- a/client/dashboard/cursosPasados/comentarios.html
+++ b/client/dashboard/cursosPasados/comentarios.html
@@ -1,8 +1,8 @@
-<template name="respuestas">
+<template name="comentarios">
 	<div class="row form-responder">
 		<div class="col-md-12">
 			<form>
-				<label for="respuesta">Responder pregunta</label>
+				<label for="respuesta">Comentar</label>
 				<textarea name="respuesta" placeholder="Escribe tu respuesta aqui..." class="form-control"></textarea>
 				<input type="hidden" name="idPregunta" value="{{idPregunta}}">
 				<button type="submit" class="btn btn-primary btn-block">Enviar</button>
