--- a/client/dashboard/curso/adminCurso.html
+++ b/client/dashboard/curso/adminCurso.html
@@ -2,6 +2,9 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="page-header">{{curso.titulo}}</h1>
+			<p class="text-right">
+				<button class="btn btn-danger finCurso"><i class="fa fa-ban"></i> Finalizar curso</button>
+			</p>
 		</div>
 	</div>
 	<div class="row">
