--- a/client/dashboard/cursos/cursosFacilitador.html
+++ b/client/dashboard/cursos/cursosFacilitador.html
@@ -22,7 +22,11 @@
 						<a href="/dashboard/adminCurso/{{_id}}" class="btn btn-primary btn-block" role="button"><i class="fa fa-folder-open"></i> Administrar Curso</a>
 						<button class="btn btn-block btn-danger btnEliminarCurso"><i class="fa fa-trash"></i> Eliminar Curso</button>
 					{{else}}
-	        	<a href="/dashboard/cursos/{{_id}}" class="btn btn-primary linkInscripcion" role="button">Inscribete</a>
+	        	 	{{#if inscrito}}
+		        		<a href="/dashboard/cursos/{{_id}}" class="btn btn-success btn-block">Ingresar</a>
+			        {{else}}
+			        	<button class="btnIncripcion btn btn-block btn-primary">Tomar Curso</button>
+			        {{/if}}
 	        {{/if}}
 	        </p>
 	      </div>
