--- a/client/dashboard/cursosPasados/discusion.html
+++ b/client/dashboard/cursosPasados/discusion.html
@@ -1,20 +1,9 @@
-<template name="preguntas">
-<h3>Preguntas del curso</h3>
+<template name="discusion">
+<h3>Discusion</h3>
 <hr>
-<!-- Caja preguntas -->
-<div class="row">
-	<div class="col-md-12">
-		<form id="nuevaPregunta">
-			<div class="input-group">
-			  <input type="text" name="pregunta" class="form-control" placeholder="Escribe tu pregunta" aria-describedby="basic-addon1">
-			  <span class="input-group-addon" id="basic-addon1"><i class="fa fa-question-circle"></i></span>
-			</div>
-		</form>
-	</div>
-</div>
 <!-- Template preguntas -->
 {{#each listaPreguntas}}
-	<div class="row ask-box">
+	<div class="row ask-box discusion-box">
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-md-3">
@@ -36,7 +25,7 @@
 						</div>
 						<div class="col-md-6 box-like">
 							<p class="text-center btnAnswer" id="btn-answer-{{_id}}"><i class="fa fa-arrow-circle-right fa-2x"></i></p>
-							<p class="text-center"><strong>Respuestas {{cantRespuestas}}</strong></p>
+							<p class="text-center"><strong>Comentarios {{cantRespuestas}}</strong></p>
 						</div>
 					</div>
 				</div>
@@ -44,7 +33,7 @@
 		</div>
 	</div>
 	<div id="answers-{{_id}}">
-		{{>respuestas idPregunta=_id}}
+		{{>comentarios idPregunta=_id}}
 	</div>
 {{/each}}
 
