--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -17,6 +17,8 @@
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
+        <!--  mensajes al admin -->
+        <!--
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
             <ul class="dropdown-menu message-dropdown">
@@ -69,6 +71,10 @@
                     <a href="#">Read All New Messages</a>
                 </li>
             </ul>
+        </li>
+        -->
+        <li>
+            <a href="/dashboard/cursosPasados">Cursos Finalizados</a>
         </li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
